# AIV

./: .debug.txt.swp  .goutputstream-2UYECY  .goutputstream-JR6GCY  .goutputstream-VJ5FCY  .goutputstream-XNUGCY  .weapon.py.swp  C920Settings.txt  LICENSE  README.md  ai.py  ai_nn.py  calibrate_camera.py  camera  camera1.txt  config.txt  error.txt  install.sh  min_setup.py  neural_net.py  run.sh  run_headless.sh  setup.sh  setupcameras.py  weapon.py
apriltags/: CMakeLists.txt
apriltags/example/: CMakeLists.txt  aiv_apriltag_detector.cpp  front_back_camera_demo.cpp
apriltags/pod-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
apriltags/pod-build/example/: Makefile  cmake_install.cmake
apriltags/pod-build/lib/pkgconfig/: apriltags.pc
trained_models/: aiv_logic-0.data-00000-of-00001  aiv_logic-0.index  checkpoint
